修复了websocket模块

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,8 @@
 <title>WEB CAMERA</title>
 </head>
 <body>
+<p>屏幕广播系统<p>
+<br>
 <img id="img_test" style="width: 1024px; height: 768px;" width="1024px" height="768px"/>
 <br>
 <button id="connect" onclick="connect_to_server();">Connect</button>
