修复显示页面显示功能

--- a/www/index.html
+++ b/www/index.html
@@ -2,14 +2,20 @@
 <head>
 <meta http-equiv="content-type" content="text/html" />
 <meta name="author" content="blog.anchen8.net" />
+<meta charset="utf-8"/>
 <title>WEB CAMERA</title>
 </head>
 <body>
+<div align="center">
 <p>屏幕广播系统<p>
 <br>
-<img id="img_test" style="width: 1024px; height: 768px;" width="1024px" height="768px"/>
+<div>
+<button id="connect" onclick="connect_to_server();">连接</button>
+<button id="disconnect"  disabled="false" onclick="disconnect_to_server();">断开连接</button>
+</div>
 <br>
-<button id="connect" onclick="connect_to_server();">Connect</button>
+<img id="img_test" style="width: 1024px; height: 768px;" width="1024px" height="768px"/>
+</div>
 <script>
 var imgtest;
 function connect_to_server(){
@@ -22,6 +28,8 @@ function connect_to_server(){
 		console.log("failed to connect to server!!");
 		return;
 	}
+	document.getElementById("connect").disabled=true;
+	document.getElementById("disconnect").disabled=false;
 	socket.onopen = sOpen;
 	socket.onerror=sError;
 	var img = document.getElementById("img_test");
@@ -36,6 +44,8 @@ function sOpen(){
 }
 function sError(){
 	console.log("server error!!");
+	document.getElementById("connect").disabled=false;
+	document.getElementById("disconnect").disabled=true;
 }
 function sMessage(msg){
 	imgtest.src = URL.createObjectURL(msg.data);
@@ -46,10 +56,12 @@ function sClose(){
 	console.log("server has offline!!\n");
 }
 function send(){
-	socket.send('hello ,i am client!')
+	socket.send('i am client!')
 }
-function close(){
+function disconnect_to_server(){
 	socket.close();
+	document.getElementById("connect").disabled=false;
+	document.getElementById("disconnect").disabled=true;
 }
 
 </script>
